组件初步可用

--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -20,13 +20,13 @@ import { Meta } from '@storybook/blocks';
 ### 安装
 
 ```bash
-npm install @taole/chatroom
+npm install svelte-components-v4
 ```
 
 ### 使用
 
 ```javascript
-import { Button, Card, Input } from '@taole/chatroom';
+import { Button, Card, Input } from 'svelte-components-v4';
 
 // 在你的 Svelte 组件中使用
 <Button variant="primary" on:click={handleClick}>
